fix profile picture fieldset overflow rendering on chrome
fixes #31

--- a/flasquelistan/static/css/streque.css
+++ b/flasquelistan/static/css/streque.css
@@ -157,12 +157,9 @@
     margin-top: 0;
 }
 
-.change-profile-picture {
+.change-profile-picture .grid-wrapper {
     max-height: 30rem;
     overflow-y: scroll;
-}
-
-.change-profile-picture .grid-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
